--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -322,20 +322,13 @@
                                     no comments yet....
                                     <br>
                                     {% else %}
-                                    <a href="templates/post_detail?post_id={{post.id}}"></a>
+                                    <a href="/post_detail/{{post.id}}"></a>
                                     {% for comment in post.comments.all %}
                                     <strong>{{ comment.name }}<br>
-                                        {{comment.date_added }}</strong>
+                                    {{comment.date_added }}</strong>
                                     <br>
                                     {{ comment.body }}
-                                    <br>
-
                                     {% endfor %}
-                                    <form action="post_detail.html" method="post">
-                                        {{ comment_form.as_p }}
-                                        {% csrf_token %}
-                                        <p><input type="submit" value="Add comment"></p>
-                                    </form>
                                     {% endif %}
                                 </div>
 
